--- a/permit-sign.html
+++ b/permit-sign.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="UTF-8" />
   <title>OP Permit Signature</title>
-  <script src="https://cdn.ethers.io/lib/ethers-5.2.umd.min.js"></script>
 </head>
 <body style="font-family:sans-serif; padding:20px; max-width:500px; margin:auto;">
   <h2>Sign Permit for OP Token</h2>
@@ -20,14 +19,16 @@
   <label>Deadline (unix timestamp):</label><br>
   <input id="deadline" type="number" style="width:100%" /><br><br>
 
-  <button onclick="signPermit()" style="padding:10px 20px; font-size:16px;">Sign Permit</button>
+  <button id="signButton" style="padding:10px 20px; font-size:16px;">Sign Permit</button>
 
   <pre id="output" style="margin-top:20px; white-space:pre-wrap; color:green;"></pre>
 
+  <!-- Load ethers.js AFTER body content -->
+  <script src="https://cdn.ethers.io/lib/ethers-5.7.umd.min.js"></script>
   <script>
-    async function signPermit() {
+    document.getElementById("signButton").onclick = async function signPermit() {
       const output = document.getElementById("output");
-      output.textContent = "Connecting to MetaMask...";
+      output.textContent = "⏳ Connecting to MetaMask...";
 
       const tokenAddress = "0x4200000000000000000000000000000000000042"; // OP Token
       const tokenName = "Optimism";
@@ -44,11 +45,9 @@
         const provider = new ethers.providers.Web3Provider(window.ethereum);
         const signer = provider.getSigner();
 
-        const nonce = await provider.call({
-          to: tokenAddress,
-          data: "0x7ecebe00000000000000000000000000" + owner.substring(2).padStart(64, '0') // nonces(address)
-        });
-        const nonceValue = ethers.BigNumber.from(nonce).toString();
+        const tokenAbi = ["function nonces(address) view returns (uint256)"];
+        const token = new ethers.Contract(tokenAddress, tokenAbi, provider);
+        const nonce = await token.nonces(owner);
 
         const domain = {
           name: tokenName,
@@ -71,7 +70,7 @@
           owner,
           spender,
           value,
-          nonce: nonceValue,
+          nonce: nonce.toString(),
           deadline
         };
 
@@ -85,13 +84,13 @@ v: ${sig.v}
 r: ${sig.r}
 s: ${sig.s}
 
-Use this data in the transfer page.
+Use these values in the permit + transfer page.
         `.trim();
       } catch (err) {
         console.error(err);
         output.textContent = "❌ Error: " + (err.reason || err.message);
       }
-    }
+    };
   </script>
 </body>
 </html>
