--- a/permit-sign.html
+++ b/permit-sign.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>OP Permit Signature</title>
+  <script src="https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.umd.min.js"></script>
 </head>
 <body style="font-family:sans-serif; padding:20px; max-width:500px; margin:auto;">
   <h2>Sign Permit for OP Token</h2>
@@ -23,7 +25,7 @@
 
   <pre id="output" style="margin-top:20px; white-space:pre-wrap; color:green;"></pre>
 
-  <script src="https://cdn.ethers.io/lib/ethers-5.7.umd.min.js"></script>
+  
   <script>
     window.addEventListener('load', function () {
       const btn = document.getElementById("signButton");
